--- a/template/index.html
+++ b/template/index.html
@@ -15,6 +15,7 @@
 		<label for="reg"><b>Registration number</b></label><br>
 		<input type="Registration number" placeholder="Enter your registration number here" name="psw" required><br>
 		<button type="submit">Confirm</button>
+		<a href="login.html">Log in if you have an existing account</a>
 	</form>
 </div>
 </body>
