this is a log in

--- a/template/posts.html
+++ b/template/posts.html
@@ -2,15 +2,22 @@
 <html>
 <head>
 	<title>Posts</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+<h1>Student center</h1>
+<div class="navbar">
+<a href="index.html">Home</a>
+<a href="login.html">Login</a>
+<a href="post.html">Post</a>
+</div>
 <body>
 <div class="login">
 	<form>
-		<h2>Posts</h2>
 		<label type = "text"><b>Posts</b></label><br>
 		<input type="text" placeholder="Enter your message here.........." text="Posts" required=><br>
 		<button type="submit">Post</button>
 		<button type="submit">Comment</button>
 	</form>
+</div>
 </body>
 </html>
