--- a/template/index.html
+++ b/template/index.html
@@ -2,21 +2,25 @@
 <html>
 <head>
 	<title>Andela university</title>
-	<link rel="stylesheet" type="text/css" href="">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+<h1>Student center</h1>
+<div class="navbar">
+<a href="index.html">Home</a>
+<a href="login.html">Login</a>
+<a href="post.html">Post</a>
+</div>
 <body>
 	<div class="registration">
-	<form>
-		<h2>Student registration</h2>
-		<label for="name"><b>Name</b></label><br>
-		<input type="text" placeholder="Enter your name here" name="name" required=><br>
-		<label for="email"><b>Email: </b></label><br>
-		<input type="password" placeholder= "Enter email here" name="user_email" required><br>
-		<label for="reg"><b>Registration number</b></label><br>
-		<input type="Registration number" placeholder="Enter your registration number here" name="psw" required><br>
-		<button type="submit">Confirm</button>
-		<a href="login.html">Log in if you have an existing account</a>
-	</form>
-</div>
+		<form>	
+			<label for="name"><b>Name</b></label><br>
+			<input type="text" placeholder="Enter your name here" name="name" required=><br>
+			<label for="email"><b>Email: </b></label><br>
+			<input type="password" placeholder= "Enter email here" name="user_email" required><br>
+			<label for="reg"><b>Registration number</b></label><br>
+			<input type="Registration number" placeholder="Enter your registration number here" name="psw" required><br>
+			<button type="submit">Confirm</button>
+		</form>
+	</div>
 </body>
 </html>
