--- a/template/login.html
+++ b/template/login.html
@@ -2,11 +2,17 @@
 <html>
 <head>
 	<title>Log in</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+<h1>Student center</h1>
+<div class="navbar">
+<a href="index.html">Home</a>
+<a href="login.html">Login</a>
+<a href="post.html">Post</a>
+</div>
 <body>
 <div class="login">
 	<form>
-		<h2>Student Login</h2>
 		<label type = "email"><b>Email</b></label><br>
 		<input type="email" placeholder="Enter your email here" name="user_email"><br>
 		<label for="psw"><b>Password</b></label><br>
