--- a/template/index.html
+++ b/template/index.html
@@ -8,18 +8,24 @@
 <div class="navbar">
 <a href="index.html">Home</a>
 <a href="login.html">Login</a>
-<a href="post.html">Post</a>
+<a href="posts.html">Posts</a>
 </div>
 <body>
 	<div class="registration">
+		<br><br>
+		<h4>Welcome</h4>
+		<h4>Register here To continue</h4>
 		<form>	
-			<label for="name"><b>Name</b></label><br>
-			<input type="text" placeholder="Enter your name here" name="name" required=><br>
+			<label for="name"><b>Name:</b></label><br>
+			<input type="text" placeholder="Enter your name here" name="name" required=>
+			<br><br>
 			<label for="email"><b>Email: </b></label><br>
-			<input type="password" placeholder= "Enter email here" name="user_email" required><br>
-			<label for="reg"><b>Registration number</b></label><br>
-			<input type="Registration number" placeholder="Enter your registration number here" name="psw" required><br>
-			<button type="submit">Confirm</button>
+			<input type="password" placeholder= "Enter email here" name="user_email" required>
+			<br><br>
+			<label for="reg"><b>Registration number:</b></label><br>
+			<input type="Registration number" placeholder="Enter your registration number here" name="psw" required>
+			<br><br>
+			<button type="submit" class="button">Register:</button>
 		</form>
 	</div>
 </body>
