--- a/template/posts.html
+++ b/template/posts.html
@@ -11,13 +11,21 @@
 <a href="post.html">Post</a>
 </div>
 <body>
-<div class="login">
-	<form>
-		<label type = "text"><b>Posts</b></label><br>
-		<input type="text" placeholder="Enter your message here.........." text="Posts" required=><br>
-		<button type="submit">Post</button>
-		<button type="submit">Comment</button>
-	</form>
+<div class="post">
+	<h4><a href="post.html">Lorem Ipsum</a></h4>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam <a href="post.html">Readmore</a></p>
+
+	<h4><a href="post.html">consectetur adipiscing elit Ipsum</a></h4>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam <a href="post.html">Readmore</a></p>
+
+	<h4><a href="post.html">Lorem Ipsum</a></h4>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam <a href="post.html">Readmore</a></p>
+
+	<h4><a href="post.html">Lorem Ipsum</a></h4>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam <a href="post.html">Readmore</a></p>
+
+	<h4><a href="post.html">Lorem Ipsum</a></h4>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam <a href="post.html">Readmore</a></p>
 </div>
 </body>
 </html>
