--- a/template/login.html
+++ b/template/login.html
@@ -17,7 +17,7 @@
 		<input type="email" placeholder="Enter your email here" name="user_email"><br>
 		<label for="psw"><b>Password</b></label><br>
 		<input type="password" placeholder= "Enter password here" name="psw"><br>
-		<button type="submit">Log in</button>
+		<button type="submit">Log in</button><br>
 		<a href="forgot_password">Forgot password</a>
 	</form>
 </div>
