--- a/template/style.css
+++ b/template/style.css
@@ -8,13 +8,31 @@ body {
 
 }
 
+.post{
+	align-items: center;
+	padding: 20px;
+	width: 80%;
+	text-align: center;
+}
+
 .login { 
 	margin-left: 500px;
 }
 .navbar {
 	background: green;
 	float: center;
-	font-size: 60px;
+	font-size: 40px;
+	background-color: black;
+
+}
+
+.navbar a {
+	float: left;
+	font-size: 16px
+	color: white;
+	text-align:center;
+	padding:14px 16px;
+	text-decoration: none;
 
 }
 
@@ -38,3 +56,8 @@ h2 {
 	letter-spacing: 3px;
 	text-transform: uppercase;
 	padding-top: 10px;
+}
+
+.button {
+	background-color: #0099cc;
+}
