--- a/template/index.html
+++ b/template/index.html
@@ -20,12 +20,14 @@
 			<input type="text" placeholder="Enter your name here" name="name" required=>
 			<br><br>
 			<label for="email"><b>Email: </b></label><br>
-			<input type="password" placeholder= "Enter email here" name="user_email" required>
+			<input type="text" placeholder= "Enter email here" name="user_email" required>
 			<br><br>
 			<label for="reg"><b>Registration number:</b></label><br>
 			<input type="Registration number" placeholder="Enter your registration number here" name="psw" required>
 			<br><br>
-			<button type="submit" class="button">Register:</button>
+			<label for="psw"><b>Password</b></label><br>
+			<input type="password" placeholder= "Enter password here" name="psw"><br>
+			<button type="submit" class="button">Register</button>
 		</form>
 	</div>
 </body>
