--- a/template/login.html
+++ b/template/login.html
@@ -11,13 +11,20 @@
 <a href="post.html">Post</a>
 </div>
 <body>
+	<br></br>
+	<br></br>
+	<br></br>
+	<br></br>
 <div class="login">
 	<form>
 		<label type = "email"><b>Email</b></label><br>
-		<input type="email" placeholder="Enter your email here" name="user_email"><br>
+		<input type="email" placeholder="Enter your email here" name="user_email">
+		<br></br>
 		<label for="psw"><b>Password</b></label><br>
-		<input type="password" placeholder= "Enter password here" name="psw"><br>
-		<button type="submit">Log in</button><br>
+		<input type="password" placeholder= "Enter password here" name="psw">
+		<br></br>
+		<button type="submit" class="button">Log in</button>
+		<br></br>
 		<a href="forgot_password">Forgot password</a>
 	</form>
 </div>
