--- a/template/style.css
+++ b/template/style.css
@@ -38,15 +38,19 @@ body {
 
 input{
 	width: 500px;
+	height: 50px;
+	box-shadow: inset 5px 5px 10px silver;
+	transition: 3s;
 }
 
 h1 {
-	background-color:violet;
+	background-color:purple;
 	text-align: center;
-	color: green;
+	color: white;
 	letter-spacing: 3px;
 	text-transform: uppercase;
 	padding-top: 10px;
+	font-family: Arial, Helvetica, sans-serif
 }
 
 h2 {
@@ -60,4 +64,7 @@ h2 {
 
 .button {
 	background-color: #0099cc;
+	width: 100px;
+	height: 40px;
+	font-size: 20px;
 }
