change on index

--- a/template/index.html
+++ b/template/index.html
@@ -6,9 +6,8 @@
 </head>
 <h1>Student center</h1>
 <div class="navbar">
-<a href="index.html">Home</a>
-<a href="login.html">Login</a>
-<a href="posts.html">Posts</a>
+<a href="login.html">Log in</a>
+<a href="posts.html">View posts</a>
 </div>
 <body>
 	<div class="registration">
@@ -29,6 +28,11 @@
 			<input type="password" placeholder= "Enter password here" name="psw"><br>
 			<button type="submit" class="button">Register</button>
 		</form>
+	</div>
+	<div class="navbar2">
+		<a href="">About us</a>
+		<a href="">Contact us</a>
+		<a href="">Our Location</a>
 	</div>
 </body>
 </html>
