--- a/template/post.html
+++ b/template/post.html
@@ -12,12 +12,14 @@
 </div>
 <body>
 <div class="post">
-	<button><a href="addpost.html">Add Post</a></button>
+	<br></br>
 	<h4><a href="post.html">Lorem Ipsum</a></h4>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam  consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam </p>
 	<h4>Comment</h4>
-	<textarea cols="45" rows="15"></textarea><br>
+	<textarea cols="55" rows="5" placeholder="Write your comments here"></textarea><br>
 	<button>Add Comment</button>
+	<br></br>
+	<button><a href="addpost.html">Add Post</a></button>
 	
 </div>
 </body>
