--- a/template/login.html
+++ b/template/login.html
@@ -6,9 +6,7 @@
 </head>
 <h1>Student center</h1>
 <div class="navbar">
-<a href="index.html">Home</a>
-<a href="login.html">Login</a>
-<a href="post.html">Post</a>
+	<a href="login.html">Login</a>
 </div>
 <body>
 	<br></br>
@@ -29,4 +27,9 @@
 	</form>
 </div>
 </body>
+	<div class="navbar2">
+		<a href="">About us</a>
+		<a href="">Contact us</a>
+		<a href="">Our Location</a>
+	</div>
 </html>
