--- a/Flask_login/templates/login.html
+++ b/Flask_login/templates/login.html
@@ -4,10 +4,14 @@
 	<title>Posts</title>
 </head>
 <body>
-	<h1>Write your posts here</h1>
+	<h1>Log in</h1>
 	<form>
-		<label type="text"><b>username:</b></label><br>
-		<input type="text" name="username" placeholder="username">
+		<label type="text"><b>Username:</b></label><br>
+		<input type="text" name="username" placeholder="username"><br>
+
+		<label type="text"><b>Password</b></label><br>
+		<input type="password" name="password" placeholder="Password"><br>
+
 		<input type="submit" >
 	</form>
 </body>
