Post and log out

--- a/Flask_login/templates/index.html
+++ b/Flask_login/templates/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>Please register to log in</h1>
-	<form method='POST'>
+	<form method = "POST">
 		<label type="text"><b>Name:</b></label><br>
 		<input type="text" name="name" placeholder="Enter your name"><br>
 
@@ -16,7 +16,7 @@
 		<input type="text" name="username" placeholder="Username"><br>
 
 		<label type="text"><b>Password</b></label><br>
-		<input type="password" name="password" placeholder="Password">
+		<input type="password" name="password" placeholder="Enter password">
 		<br><br>
 		<input type="submit"</a>
 	</form>
