--- a/Flask_login/templates/login.html
+++ b/Flask_login/templates/login.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>Log in</h1>
-	<form>
+	<form method = "GET">
 		<label type="text"><b>Username:</b></label><br>
 		<input type="text" name="username" placeholder="username"><br>
 
