--- a/Flask_login/templates/post.html
+++ b/Flask_login/templates/post.html
@@ -7,7 +7,8 @@
 	<h1>Write your posts here</h1>
 	<form>
 		<label type="text"><b>Post:</b></label><br>
-		<input type="text" name="username" placeholder="Write post here">
+		<input type="text" name="post" placeholder="Write post here">
+
 		<input type="submit">
 	</form>
 </body>
