--- a/Flask_login/templates/post.html
+++ b/Flask_login/templates/post.html
@@ -4,7 +4,7 @@
 	<title>Posts</title>
 </head>
 <body>
-	<h1>Write your posts here</h1>
+	<h1>You are logged in write your posts here</h1>
 	<form>
 		<label type="text"><b>Post:</b></label><br>
 		<input type="text" name="post" placeholder="Write post here">
